<resources>
    <string name="app_name">Tugas10</string>
    <string name="profile">Profile</string>
    <string name="search_job">Search Job</string>
    <string name="notification">Notification</string>
    <string name="messages">Messages</string>
    <string name="rate_card">Rate Card</string>
    <string name="review">Review</string>
    <string name="name">Bima Bagaskhoro</string>
    <string name="built_with_love">Built With Love</string>
</resources>