<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_marginTop="16dp"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:background="@color/hijau"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_person_outline_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:layout_below="@id/imageView"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relative1">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_outline_location_on_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/search_job"
            android:textColor="@color/white"
            android:layout_below="@id/imageView2"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relative3"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:background="@color/pinsk"
        app:layout_constraintEnd_toEndOf="@+id/relative1"
        app:layout_constraintStart_toStartOf="@+id/relative1"
        app:layout_constraintTop_toBottomOf="@+id/relative1">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_notifications_none_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/notification"
            android:textColor="@color/white"
            android:layout_below="@id/imageView3"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative4"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:background="@color/gold"
        app:layout_constraintEnd_toEndOf="@+id/relative2"
        app:layout_constraintStart_toStartOf="@+id/relative2"
        app:layout_constraintTop_toBottomOf="@+id/relative2">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_mail_outline_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/messages"
            android:textColor="@color/white"
            android:layout_below="@id/imageView4"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative5"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:background="@color/greens"
        app:layout_constraintEnd_toEndOf="@+id/relative3"
        app:layout_constraintStart_toStartOf="@+id/relative3"
        app:layout_constraintTop_toBottomOf="@+id/relative3">
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_star_outline_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/rate_card"
            android:textColor="@color/white"
            android:layout_below="@id/imageView5"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative6"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:background="@color/pink"
        app:layout_constraintEnd_toEndOf="@+id/relative4"
        app:layout_constraintStart_toStartOf="@+id/relative4"
        app:layout_constraintTop_toBottomOf="@+id/relative4">
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_outline_thumb_up_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/review"
            android:textColor="@color/white"
            android:layout_below="@id/imageView6"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>